2005.12.10
----------
- some spring cleaning of old, unused code
- reworked tag schemas, the previous ones were an embarassment to all thats
good and decent in the world
- tagging results in the search view should now work
- some UI love
- forgot the add conn_mgr.glade to svn
- had to remove some duplicate genus entries from Genus.txt until we get
the synonyms better sorted out

2005.12.09
----------
- major overhaul on the connection manager, now (mostly) uses glade

2005.12.08
---------
- started work on tag support in plugins\tag, the db schema seems to be set
and tagging working, just need to create an interface for it
- field Genus.genus is now an alternateID, probably more schema changes coming
soon so we can get everything in a relatively stable state


2005.12.02
---------
- lots of work on connecting the database to the infoboxes and creating 
infoboxes for those database types that didn't have


2005.12.01
---------
- fixes for formatters
- fixes to use vernacular_name instead of default_vernacular_name in abcd.py
- Accession and Plant now have markup() which give the species name
- some searchview fixes
- tagged 0.3.0 and forgot to uncomment the schema changes, tag 0.3.1
- fixed problem with exporting CSV that was only in 0.3.0 so no worries
- changed setup.py to use version_str from bauble\__init__.py so we only
have to set the version in one place


2005.11.26
---------
- hopefully fixes some unstableness by not deleting the dialog of a 
TreeViewEditorDialog
- changed the model again to add a notes column to both Plant and 
Accession
- bumped revision to 0.3.0 because of change to the model


2005.11.24
---------
- fixed editing a species giving a message as if you were adding a new
one
- fixed markup tag on species


2005.11.23
---------
- added some more safety check that you're not connected to a corrupt
- fixed a problem when on committing multiple items in an editor
- csv export is painfully slow, need to do something about it